manifests/demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: rhdh-demo
  labels:
    app: demo-app
    backstage.io/kubernetes-id: demo-app
spec:
  selector:
    app: demo-app
  ports:
    - port: 8080
      targetPort: 8080
